--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -28,7 +28,7 @@
             <div class="card-body">
                 <!-- The post content goes inside the card-text. -->
                 <!-- Use the | safe filter inside the template tags -->
-                <p class="card-text">{{ post.content | safe }}</p>
+                <article class="card-text">{{ post.content | safe }}</article>
             </div>
         </div>
     </div>
@@ -71,8 +71,8 @@
                 {% endif %}
                 <!-- Edit button & Delete button -->
                 {% if user.is_authenticated and comment.author == user %}
-                <button class="btn btn-delete" comment_id="{{ comment.id }}">Delete</button>
-                <button class="btn btn-edit" comment_id="{{ comment.id }}">Edit</button>
+                <button class="btn btn-delete" data-comment_id="{{ comment.id }}">Delete</button>
+                <button class="btn btn-edit" data-comment_id="{{ comment.id }}">Edit</button>
                 {% endif %}
             </div>
             <!-- Our for loop ends here -->
